--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.72.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -22,6 +23,7 @@
     "next": "14.2.16",
     "next-sanity": "^9.8.45",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "sanity": "^3.72.1",
